kube-exam/03/multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
spec:
  containers:
    - image: nginx
      imagePullPolicy: IfNotPresent
      name: alpha
    - image: busybox
      name: beta
      command: ["sleep","4800"]
